refactor: change payment summary endpoint to use query parameter and update openapi
