# public/openapi.json
@@ -4497,7 +4497,7 @@
                 }
             }
         },
-        "/api/v1/purchase/receiving/{id}/payment-summary": {
+        "/api/v1/purchase/payment/summary": {
             "get": {
                 "tags": [
                     "Purchase Payments"
@@ -4510,9 +4510,10 @@
                 ],
                 "parameters": [
                     {
-                        "name": "id",
-                        "in": "path",
+                        "name": "receiving_id",
+                        "in": "query",
                         "required": true,
+                        "description": "The ID of the Stock Receiving note.",
                         "schema": {
                             "type": "integer"
                         }
